Add scroll script

--- a/ui/grid/design.html
+++ b/ui/grid/design.html
@@ -10,7 +10,7 @@
 <div id="c1" class="st-grid">
 	<div class="header">Header</div>
 	<div class="table-head">
-		<table class="head" border="0">
+		<table>
 			<col style="width: 50px"/>
 			<col style="width: 100px"/>
 			<col style="width: auto"/>
@@ -26,7 +26,7 @@
 		</table>
 	</div>
 	<div class="table-data">
-		<table border="0">
+		<table>
 			<col style="width: 50px"/>
 			<col style="width: 100px"/>
 			<col style="width: auto"/>
@@ -85,5 +85,7 @@
 	</div>
 	<div class="footer">Footer</div>
 </div>
+<script type="text/javascript" src="../../lib/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="grid.js"></script>
 </body>
 </html>
